<resources>
    <string name="app_name">TaskManager</string>
    <string name="action_settings">Settings</string>
    <string-array name="filters">
        <item>Active</item>
        <item>Completed</item>
        <item>All</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="item_view_task">Task</string>
    <string name="item_view_note">Notes</string>
    <string name="item_status">status</string>
    <string name="item_todo_status">TODO_STATUS</string>
    <string name="item_date">Date.</string>
    <string name="statusTxt_active">Active</string>
    <string name="statusTxt_completed">Completed</string>
    <string name="addTask_save">Save</string>
    <string name="workspacetxt_main">Workspace</string>
</resources>
