<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E2E2"
    tools:context=".AddTask">

    <EditText
        android:id="@+id/addTask_editTask"
        android:layout_width="382dp"
        android:layout_height="52dp"
        android:layout_marginTop="200dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/item_view_task"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addTask_editNote"
        android:layout_width="381dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/item_view_note"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/addTask_editTask"
        app:layout_constraintStart_toStartOf="@+id/addTask_editTask"
        app:layout_constraintTop_toBottomOf="@+id/addTask_editTask" />

    <Button
        android:id="@+id/addTask_saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/addTask_save"
        app:layout_constraintEnd_toEndOf="@+id/addTask_editNote"
        app:layout_constraintTop_toBottomOf="@+id/addTask_editNote" />

    <Button
        android:id="@+id/addTask_cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toStartOf="@+id/addTask_editTask"
        app:layout_constraintTop_toTopOf="@+id/addTask_saveBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>